<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qqback"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/img_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/headshape"
        android:contentDescription="@string/app_name"
        android:src="@drawable/yang" />

    <EditText
        android:id="@+id/username"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:background="@drawable/shape"
        android:entries="@array/id"
        android:hint="@string/username"
        android:prompt="@string/tip2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:background="@drawable/shape"
        android:entries="@array/psw"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:prompt="@string/tip1" />

    <Button
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:background="@drawable/login_selector"
        android:text="@string/login" />

</FrameLayout>