<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" 
    android:background="@drawable/qqback">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView 
        android:layout_width="80dp"
        android:layout_height="wrap_content"
     android:text="@string/activity_amout"
       
        />
     <TextView 
        android:layout_width="100dp"
        android:layout_height="wrap_content"
       android:text="@string/activity_date"
        
        />
      <TextView 
        android:layout_width="80dp"
        android:layout_height="wrap_content"
       android:text="@string/activity_commission"
       
        />
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:text="@string/activity_description"
       
        />

</LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview"
        />


</LinearLayout>