<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/qqback"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/qqback"
        android:shrinkColumns="1,2"
        android:stretchColumns="0,1,2" >

        <TableRow>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CD00CD"
                android:gravity="center"
                android:text="@string/account_balance" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BBFFFF"
                android:gravity="center"
                android:text="@string/account_limit" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#A020F0"
                android:gravity="center"
                android:text="@string/comment" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:background="#ffff00"
                android:gravity="center"/>

            <TextView
                android:id="@+id/account_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:background="#ffff00"
                android:gravity="center"/>

            <TextView
                android:id="@+id/account_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:background="#ffff00"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

</LinearLayout>